package edu.fiuba.algo3.modelo;

public interface Edificio {
    String mostrarPista();
    void generarPistaEdificio(Ciudad unaCiudad, String laPista);
}
